[package]
name = "squircle-util"
version = "0.1.0"
edition = "2024"
description = "Parser for Rhythia type maps"
license = "AGPL-3.0"
keywords = ["rhythia", "sspm", "phxm", "rhym"]
readme = "README.md"
repository = "https://github.com/lulusuki/squircle-util"

[dependencies]
infer = "0.19.0"
num = "0.4.3"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
zip = "7.4.0"
